--- a/blog/config.toml
+++ b/blog/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://technicalsourcery.net/"
 languageCode = "en-us"
 title = "Technichal Sourcery"
 theme = "beg"
