Work around docker-hugo annoyance with base-url

--- a/blog/config.toml
+++ b/blog/config.toml
@@ -2,12 +2,11 @@ baseURL = "https://technicalsourcery.net/"
 languageCode = "en-us"
 author = "Karl Stenerud"
 title = "Technichal Sourcery"
-canonifyurls = true
+#canonifyurls = true
 paginate = 3
 theme = "aether"
 
 [params]
 brand = "Technical SOURCEry"
 description = "Drawing back the curtain"
-homeimg = "test.png"
 # bgimg = "URL to the image used for the page background - optional"
