--- a/blog/config.toml
+++ b/blog/config.toml
@@ -9,9 +9,11 @@ theme = "aether"
 [params]
 brand = "Technical SOURCEry"
 description = "Drawing back the curtain"
-authorDescription = "Karl Stenerud is a software engineer with over 20 years as a professional in the industry. His extensive and unique experiences span four countries, and cover everything from embedded systems to enterprise services."
+authorDescription = "I'm a software engineer with over 20 years as a professional in the industry. My extensive and unique experiences spans four countries, covering everything from embedded systems to enterprise services."
 authorImage = "avatar.jpg"
 # bgimg = "URL to the image used for the page background - optional"
 github = "https://github.com/kstenerud"
 email = "kstenerud@gmail.com"
 linkedin = "https://www.linkedin.com/in/kstenerud"
+authorTitle = "Software Professional"
+author = "Karl Stenerud"
