--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,7 +61,7 @@ titleCase = true # Capitalized title.
 viewer = true # Image Viewer
 
 [codeBlock]
-  # maxLines = 8
+  maxLines = 100
   lineNos = false # true/false represents that show/hide the line numbers by default.
 
 [post]
