--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 
 # titleSeparator = "|" # Title separator. Default to "-".
 
-description = "An extreme fast, responsive and feature-rich blog theme for Hugo"
-keywords = "Hugo, Bootstrap, Blog Theme"
-# images = ["site-feature-image.jpg"]
+description = "Delving deep into the technical arts"
+keywords = "blog,programming,data-format,low-level,data-communications,bare-metal"
+images = ["images/site-feature-image.jpg"]
 
 metaRobots = "noindex, nofollow" # Default value for Meta Tag "robots"
 # metaRobots = "" # disable Meta Tag "robots"
